--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <div class="col-md-7">
                             <div class="panel panel-default home">
                                 <div class="panel-body">
-                                    <h2 style="color:rgb(85, 183, 212);"> Summary: Latitude and Longitude</h2>
+                                    <h2 style="color:rgb(85, 183, 212);"> Summary: Latitude Vs. X</h2>
                                     <hr>
                                     
                                         <img class = "img-responsive" 
